[tool.poetry]
name = "coin2086"
version = "0.1.2"
description = "French Crypto Taxes Made Easy"
authors = ["Fabien André <fabien.andre90@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/fandre90/coin2086"
repository = "https://github.com/fandre90/coin2086"
documentation = "https://coin2086.readthedocs.io/"
keywords = ["cryptocurrency", "accounting", "tax"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1"
requests = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^5.5.3"
Sphinx = "^3.5.4"
sphinx-rtd-theme = "^0.5.2"
dataframe-image = "^0.1.1"
sphinxcontrib-images = "^0.9.3"
black = "^21.5b0"
tox = "^3.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
